# LightYearsGame

./: CMakeLists.txt  commands.txt  progress.txt  readme.txt
docs/UMLClassesDiagrams/: LightYearsGameArch.puml
engine/: CMakeLists.txt
engine/include/VFX/: Particle.h
engine/include/framework/: Actor.h  AssetManager.h  Core.h  Delegate.h  MathUtility.h  Object.h  PhysicsSystem.h  TimerManager.h  World.h  application.h
engine/include/gameplay/: GameStage.h  WaitStage.h
engine/src/: EntryPoint.cpp
engine/src/VFX/: Particle.cpp
engine/src/framework/: Actor.cpp  AssetManager.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  TimerManager.cpp  World.cpp  application.cpp
engine/src/gameplay/: GameStage.cpp  WaitStage.cpp
game/: CMakeLists.txt
game/include/: config.h
game/include/Enemy/: EnemySpaceship.h  Hexagon.h  TwinBlade.h  TwinBladeStage.h  Vanguard.h  VanguardStage.h
game/include/Level/: GameLevelOne.h
game/include/VFX/: Explosion.h
game/include/framework/: game.h
game/include/game_framework/: GameApplication.h
game/include/gameplay/: HealthComponent.h
game/include/player/: PlayerSpaceship.h
game/include/spaceship/: Spaceship.h
game/include/weapon/: Bullet.h  BulletShooter.h  Shooter.h
game/src/: main.cpp
game/src/Enemy/: EnemySpaceship.cpp  Hexagon.cpp  TwinBlade.cpp  TwinBladeStage.cpp  Vanguard.cpp  VanguardStage.cpp
game/src/Level/: GameLevelOne.cpp
game/src/VFX/: Explosion.cpp
game/src/framework/: game.cpp
game/src/game_framework/: GameApplication.cpp
game/src/gameplay/: HealthComponent.cpp
game/src/player/: PlayerSpaceship.cpp
game/src/spaceship/: Spaceship.cpp
game/src/weapon/: Bullet.cpp  BulletShooter.cpp  Shooter.cpp
